--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,10 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/test">
+    app:startDestination="@id/cards_navigation">
 
-    <fragment
-        android:id="@+id/test"
-        android:name="com.example.yugioh_forbidden_memories_helper.BlankFragment"
-        android:label="@string/hello_blank_fragment"/>
+    <include app:graph="@navigation/cards_navigation"/>
 </navigation>
