--- a/feature/cards/src/main/res/layout/fragment_main_cards.xml
+++ b/feature/cards/src/main/res/layout/fragment_main_cards.xml
@@ -6,12 +6,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.MainCardsFragment">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout_mainCards_topBar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/topBarHeight"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/colorPrimary">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:fontFamily="@font/rubik_light"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="24sp"
+            android:text="List of cards"/>
+
+        <ImageView
+            android:id="@+id/imageButton_mainCards_goToFiltersScreen"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="12dp"
+            android:tint="@color/white"
+            android:src="@android:drawable/ic_menu_sort_by_size"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_mainCards_cardsList"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_mainCards_topBar"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/card_list_big_image_item"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
