Creating bottom menu

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,4 +5,5 @@
     app:startDestination="@id/cards_navigation">
 
     <include app:graph="@navigation/cards_navigation"/>
+    <include app:graph="@navigation/characters_navigation"/>
 </navigation>
