--- a/feature/designsystem/src/main/res/values/colors.xml
+++ b/feature/designsystem/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#BC1F1F</color>
     <color name="colorSecondary">#DFAB38</color>
     <color name="black">#FF000000</color>
+    <color name="grey">#BCB5B5</color>
 </resources>
