--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
         app:menu="@menu/bottom_navigation_menu"
         app:itemTextColor="@animator/bottom_nav_color"
         app:itemIconTint="@animator/bottom_nav_color"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
