--- a/feature/cards/src/main/res/layout/card_list_big_image_item.xml
+++ b/feature/cards/src/main/res/layout/card_list_big_image_item.xml
@@ -6,23 +6,35 @@
     android:layout_height="wrap_content"
     android:elevation="5dp"
     android:layout_margin="8dp"
+    app:cardCornerRadius="14dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/card_view_background"
         android:padding="12dp">
 
-        <ImageView
-            android:id="@+id/imageView_cardListDetails_cardImage"
-            android:layout_width="180dp"
-            android:layout_height="240dp"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView_cardListDetails_cardImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="14dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/card_image_default"/>
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:id="@+id/imageView_cardListDetails_cardImage"
+                android:layout_width="155dp"
+                android:layout_height="220dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/card_image_default"/>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/textView_cardListDetails_cardName"
@@ -30,9 +42,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:padding="2dp"
-            app:layout_constraintEnd_toEndOf="@id/imageView_cardListDetails_cardImage"
-            app:layout_constraintStart_toStartOf="@id/imageView_cardListDetails_cardImage"
-            app:layout_constraintTop_toBottomOf="@id/imageView_cardListDetails_cardImage"
+            app:layout_constraintEnd_toEndOf="@id/cardView_cardListDetails_cardImage"
+            app:layout_constraintStart_toStartOf="@id/cardView_cardListDetails_cardImage"
+            app:layout_constraintTop_toBottomOf="@id/cardView_cardListDetails_cardImage"
             android:fontFamily="@font/rubik_light"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold"
@@ -47,8 +59,8 @@
             android:padding="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView_cardListDetails_cardName"
-            app:layout_constraintStart_toStartOf="@id/imageView_cardListDetails_cardImage"
-            app:layout_constraintEnd_toEndOf="@id/imageView_cardListDetails_cardImage"
+            app:layout_constraintStart_toStartOf="@id/cardView_cardListDetails_cardImage"
+            app:layout_constraintEnd_toEndOf="@id/cardView_cardListDetails_cardImage"
             android:fontFamily="@font/rubik_light"
             android:textColor="@color/black"
             android:textSize="14sp"
