--- a/feature/cards/src/main/res/layout/fragment_main_cards.xml
+++ b/feature/cards/src/main/res/layout/fragment_main_cards.xml
@@ -35,7 +35,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="12dp"
-            android:tint="@color/white"
+            app:tint="@color/white"
             android:src="@android:drawable/ic_menu_sort_by_size"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -44,6 +44,7 @@
         android:id="@+id/recyclerView_mainCards_cardsList"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout_mainCards_topBar"
