--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,4 +6,5 @@
 
     <include app:graph="@navigation/cards_navigation"/>
     <include app:graph="@navigation/characters_navigation"/>
+    <include app:graph="@navigation/fusion_navigation"/>
 </navigation>
