--- a/feature/designsystem/src/main/res/color/save_button_background.xml
+++ b/feature/designsystem/src/main/res/color/save_button_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true"
-        android:drawable="@color/colorPrimary"/>
+        android:color="@color/colorPrimary"/>
     <item android:state_enabled="false"
-        android:drawable="@color/grey"/>
+        android:color="@color/grey"/>
 </selector>
