--- a/feature/cards/src/main/res/layout/fragment_main_cards.xml
+++ b/feature/cards/src/main/res/layout/fragment_main_cards.xml
@@ -40,6 +40,28 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <EditText
+        android:id="@+id/editText_mainCards_searchName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:padding="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout_mainCards_topBar"
+        android:fontFamily="@font/rubik_light"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:textAllCaps="false"
+        android:singleLine="true"
+        android:scrollHorizontally="true"
+        android:hint="Name"
+        android:drawableEnd="@android:drawable/ic_menu_search"
+        android:background="@drawable/fusion_search_background"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_mainCards_cardsList"
         android:layout_width="0dp"
@@ -47,7 +69,7 @@
         android:layout_marginTop="2dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_mainCards_topBar"
+        app:layout_constraintTop_toBottomOf="@+id/editText_mainCards_searchName"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/card_list_big_image_item"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
